started the main structure

--- a/Cart.html
+++ b/Cart.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Cart</title>
+    <link rel="stylesheet" href="./CSS/cartStyling.css">
 </head>
 
 <body>
-
+    <a href="./checkout.html">go to checkout</a>
+    <!-- THis one is for the shopingcart -->
 </body>
 
 </html>
