--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <title>Welcome to ENJOY!!</title>
+    <link rel="stylesheet" href="./CSS/indexStyling.css">
+    <!-- Use it if you need to do some script in this site
+        In this case you need also to create js page with name indexJS.js in the js folder then do the link here
+        <script defer src=""></script> -->
 </head>
 
 <body>
-
     <div class="row">
         <div class="column">
             <img src="./gif spiral.gif" alt="Snow" style="width:100%">
@@ -25,43 +24,10 @@
             <img src="./gif spiral.gif" alt="Mountains" style="width:100%">
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="jiggi">
-
-
-
-
-
-        <button type="button" class="btn btn-primary btn-lg">YES</button>
-        <button type="button" class="btn btn-secondary btn-lg">YES</button>
-
+        <a href="./login.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
+        <a href="./login.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
     </div>
-    <div class="box1">
-    </div>
-
-
-
-
-
-
-
-
-    <div class="box2"></div>
-
-
-    <body style="background-color:black;text-align:center"></body>
 </body>
 
 </html>
