--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -26,23 +26,7 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="jiggi">
-
-
-
-
 
         <button type="button" class="btn btn-primary btn-lg">YES</button>
         <button type="button" class="btn btn-secondary btn-lg">YES</button>
@@ -52,9 +36,12 @@
     </div>
 
 
-
-
-
+    <div class="logos">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+    </div>
 
 
 
