--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="./admin.html">go to admin site</a> <br>
+        <a href="./adminFrontend/admin.html">go to admin site</a> <br>
         <a href="./signupUser.html">go to regsite</a> <br>
         <a href="./Cart.html">go to cart</a>
         <!-- We need here to get the inlog field and "OR register" to the top right
