--- a/adminFrontend/admin.html
+++ b/adminFrontend/admin.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Products</a></li>
                 <li>
                     <div class="dropdown">
-                        <button class="dropbtn">Users</button>
+                        <button id="users" class="dropbtn">Users</button>
                         <div class="dropdown-content">
                             <a href="#">Costumers</a>
                             <a href="#">Admins</a>
