--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/loginStyling.css">
     <script defer type="module" src="./JS/mainJS.js"></script>
+    <script defer type="module" src="./JS/categoryJS.js"></script>
 </head>
 <!-- I WILL DO SOME LOGIN THINGS AND OTHER STUFFS THAT U JUST CAN REPLACE WHEN YOU DO YOUR CODING
     BUT I NEED IT TO CONNECT THE IDEAS IN MY BRAIN :) 
@@ -23,7 +24,7 @@
     </header>
     <main>
         <div>
-            <div>
+            <div id="categories">
                 <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
             </div>
