--- a/login.html
+++ b/login.html
@@ -38,12 +38,13 @@
         then the name of our website in the middle with a nice style -->
     </header>
     <main>
-        <div>
-            <div id="categories">
+        <div class="container">
+            <aside id="categories">
+                <h2 id="allProds">Products</h2>
                 <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
-            </div>
-            <div>
+            </aside>
+            <div id="categoryItems">
                 <!-- This div to be able to style this childs as this will contain all the items
                     so we can place them right or left depending on the numbers of the items -->
                 <div>
@@ -55,7 +56,14 @@
         </div>
     </main>
     <footer class="footer">
-        <a href="./adminFrontend/admin.html">go to admin site</a>
+        <div>
+            <h2 class="SubScribe">Subscribe Newsletter</h2>
+            <input type="text" placeholder="name">
+            <input type="text" placeholder="email">
+            <button id="newsbtn" class="button">Submit</button>
+        </div>
+        <div><a href="./adminFrontend/admin.html">go to admin site</a></div>
+        
         <!-- If we want to have footer for some reason -->
     </footer>
 </body>
