YOOOPIII, succeeded with the db connection and wrote some foreach to bind the parameters

--- a/signupUser.html
+++ b/signupUser.html
@@ -32,9 +32,9 @@
             <input type="text" value="" class="userEmailInput" name="email" id="email">
 
             <label for="firstname" class="userPwdlabel">Password</label>
-            <input type="password" value="" class="userPwdInput" id="userPwdInput"> <br>
+            <input type="text" value="" class="userPwdInput" name="userPwdInput" id="userPwdInput"> <br>
 
-            <input type="radio" name="role" value="customer" id="role"> customer
+            <input type="radio" name="role" value="Customer" id="role"> Customer
             <input type="radio" name="role" value="admin" id="role">Admin <br>
             <input type="submit" value="Submit" name="Submit" id="signUpSubmit" />
 
