Change admin.php to admin.html

--- a/admin.html
+++ b/admin.html
@@ -65,13 +65,11 @@
 
                             <div class="row">
                                 <div class="label-left">Category Name</div>
-                                <input name="CategoryName" type="text" id="CategoryName" tabindex="1"
-                                    placeholder="Category Name">
+                                <input name="CategoryName" type="text" id="CategoryName" tabindex="1" placeholder="Category Name">
                             </div>
 
                             <div class="rowButton">
-                                <input name="addCategory" type="button" id="button" tabindex="2" value="Add Category"
-                                    onclick="msg()">
+                                <input name="addCategory" type="button" id="button" tabindex="2" value="Add Category" onclick="msg()">
                             </div>
 
                         </div>
@@ -119,8 +117,7 @@
 
                                 <div class="row">
                                     <div class="label-left">Category Name</div>
-                                    <select name="CategoryName" id="CategoryName" tabindex="1"
-                                        placeholder="Category Name">
+                                    <select name="CategoryName" id="CategoryName" tabindex="1" placeholder="Category Name">
                                         <option value="AddCategory">Choice Category</option>
                                         <option value="PC">PC</option>
                                         <option value="X-Box">X-Box</option>
@@ -130,14 +127,12 @@
 
                                 <div class="row">
                                     <div class="label-left">Product Name</div>
-                                    <input name="ProductName" type="text" id="ProductName" tabindex="2"
-                                        placeholder="Category Name">
+                                    <input name="ProductName" type="text" id="ProductName" tabindex="2" placeholder="Category Name">
                                 </div>
 
                                 <div class="row">
                                     <div class="label-left">Unit In Stock</div>
-                                    <input name="UnitInStock" type="text" id="UnitInStock" tabindex="3"
-                                        placeholder="Unit In Stock">
+                                    <input name="UnitInStock" type="text" id="UnitInStock" tabindex="3" placeholder="Unit In Stock">
                                 </div>
 
                                 <div class="row">
@@ -147,19 +142,16 @@
 
                                 <div class="row">
                                     <div class="label-left">Product Name</div>
-                                    <input name="Description" type="text" id="Description" tabindex="5"
-                                        placeholder="Description">
+                                    <input name="Description" type="text" id="Description" tabindex="5" placeholder="Description">
                                 </div>
 
                                 <div class="row">
                                     <div class="rowButton">
-                                        <input name="CoverPicture" type="button" id="buttonAdd" tabindex="6"
-                                            value="Add Cover Picture" onclick="">
+                                        <input name="CoverPicture" type="button" id="buttonAdd" tabindex="6" value="Add Cover Picture" onclick="">
                                     </div>
 
                                     <div class="rowButton">
-                                        <input name="PNGPicture" type="button" id="buttonAdd" tabindex="7"
-                                            value="Add PNG Picture" onclick="">
+                                        <input name="PNGPicture" type="button" id="buttonAdd" tabindex="7" value="Add PNG Picture" onclick="">
                                     </div>
 
                                 </div>
@@ -174,12 +166,11 @@
                                     </div>
                                     <div class="row">
                                         <div class="label-left">Add PNG Picture</div>
-                                        <div class="PNGPicture" name="PNGPictureBtn" ></div>
+                                        <div class="PNGPicture" name="PNGPictureBtn"></div>
                                     </div>
                                 </div>
                                 <div class="rowButton">
-                                    <input name="addCategory" type="button" id="button" tabindex="8"
-                                        value="Add Category" onclick="">
+                                    <input name="addCategory" type="button" id="button" tabindex="8" value="Add Category" onclick="">
                                 </div>
                             </div>
 
@@ -191,35 +182,35 @@
                 </div>
 
                 <div class="bdcProDelUpp bdc">
-                <div class="addText">Update/Delete Category</div>
-                        <div class="columnContainer">
+                    <div class="addText">Update/Delete Category</div>
+                    <div class="columnContainer">
 
-                            <div class="columnMain">
-                                <div class="columnMainText">ProductID</div>
-                                <div class="columnMainText">CategoryID</div>
-                                <div class="columnMainText">ProductName</div>
-                                <div class="columnMainText">UnitInStock</div>
-                                <div class="columnMainText">Price</div>
-                                <div class="columnMainText">CoverPicture</div>
-                                <div class="columnMainText">PNGPicture</div>
-                                <div class="columnMainText">Description</div>
+                        <div class="columnMain">
+                            <div class="columnMainText">ProductID</div>
+                            <div class="columnMainText">CategoryID</div>
+                            <div class="columnMainText">ProductName</div>
+                            <div class="columnMainText">UnitInStock</div>
+                            <div class="columnMainText">Price</div>
+                            <div class="columnMainText">CoverPicture</div>
+                            <div class="columnMainText">PNGPicture</div>
+                            <div class="columnMainText">Description</div>
 
-                            </div>
-
-                            <div class="columnSub">
-                                <div name="ProductID" id="ColumnSubText">ProductID</div>
-                                <div name="CategoryID" id="ColumnSubText">CategoryID</div>
-                                <div name="ProductName" id="ColumnSubText">ProductName</div>
-                                <div name="UnitInStock" id="ColumnSubText">UnitInStock</div>                                
-                                <div name="Price" id="ColumnSubText">Price</div>
-                                <div name="CoverPicture" id="ColumnSubText">CoverPicture</div>
-                                <div name="PNGPicture" id="ColumnSubText">PNGPicture</div>
-                                <div name="Description" id="ColumnSubText">Description</div>
-                                <div name="Update" id="Update" onclick="">Update</div>
-                                <div name="Delete" id="Delete" onclick="">Delete</div>
-                            </div>
-                            
                         </div>
+
+                        <div class="columnSub">
+                            <div name="ProductID" id="ColumnSubText">ProductID</div>
+                            <div name="CategoryID" id="ColumnSubText">CategoryID</div>
+                            <div name="ProductName" id="ColumnSubText">ProductName</div>
+                            <div name="UnitInStock" id="ColumnSubText">UnitInStock</div>
+                            <div name="Price" id="ColumnSubText">Price</div>
+                            <div name="CoverPicture" id="ColumnSubText">CoverPicture</div>
+                            <div name="PNGPicture" id="ColumnSubText">PNGPicture</div>
+                            <div name="Description" id="ColumnSubText">Description</div>
+                            <div name="Update" id="Update" onclick="">Update</div>
+                            <div name="Delete" id="Delete" onclick="">Delete</div>
+                        </div>
+
+                    </div>
                 </div>
 
                 <div class="bdcUseAdd bdc">
