admin.html change

--- a/admin.html
+++ b/admin.html
@@ -194,7 +194,6 @@
                             <div class="columnMainText">CoverPicture</div>
                             <div class="columnMainText">PNGPicture</div>
                             <div class="columnMainText">Description</div>
-
                         </div>
 
                         <div class="columnSub">
@@ -203,9 +202,9 @@
                             <div name="ProductName" id="ColumnSubText">ProductName</div>
                             <div name="UnitInStock" id="ColumnSubText">UnitInStock</div>
                             <div name="Price" id="ColumnSubText">Price</div>
-                            <div name="CoverPicture" id="ColumnSubText">CoverPicture</div>
-                            <div name="PNGPicture" id="ColumnSubText">PNGPicture</div>
-                            <div name="Description" id="ColumnSubText">Description</div>
+                            <div name="CoverPicture" id="ColumnSubText"></div>
+                            <div name="PNGPicture" id="ColumnSubText"></div>
+                            <p name="Description" id="ColumnSubText">Description</p>
                             <div name="Update" id="Update" onclick="">Update</div>
                             <div name="Delete" id="Delete" onclick="">Delete</div>
                         </div>
