--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
             <input id="username" type="text" placeholder="username">
             <input id="password" type="text" placeholder="password">
             <button class="button">Submit</button>
-            <button id="signUpbtn" class="button">Sign Up</button>
+            <a href="./signupUser.html"><button class="button">Sign Up</button></a>
         </div>
 
         <!-- We need here to get the inlog field and "OR register" to the top right
@@ -40,7 +40,7 @@
     <main>
         <div class="container">
             <aside id="categories">
-                <h2 id="allProds">Products</h2>
+                <p id="getProds" >Products</p>
                 <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
             </aside>
