--- a/signupUser.html
+++ b/signupUser.html
@@ -8,7 +8,8 @@
     <title>Sign up</title>
     <link rel="stylesheet" href="./CSS/signupStyling.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <script defer type="module" src="./JS/eventListeners.js"></script>
+    <script defer type="module" src="./JS/mainJS.js"></script>
+    <script defer type="module" src="./JS/signupJS.js"></script>
 
 </head>
 
