show products add images file

--- a/login.html
+++ b/login.html
@@ -40,11 +40,14 @@
     <main>
         <div class="container">
             <aside id="categories">
-                <p id="getProds" >Products</p>
+                <a href="./login.html"><p id="getProds">Products</p></a>
                 <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
             </aside>
-            <div id="categoryItems">
+                <div class="allProducts" id="allProducts">
+
+                </div>
+            <div class="categoryItems" id="categoryItems">
                 <!-- This div to be able to style this childs as this will contain all the items
                     so we can place them right or left depending on the numbers of the items -->
                 <div>
@@ -63,7 +66,7 @@
             <button id="newsbtn" class="button">Submit</button>
         </div>
         <div><a href="./adminFrontend/admin.html">go to admin site</a></div>
-        
+
         <!-- If we want to have footer for some reason -->
     </footer>
 </body>
