--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to ENJOY!!</title>
     <link rel="stylesheet" href="./CSS/indexStyling.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Use it if you need to do some script in this site
         In this case you need also to create js page with name indexJS.js in the js folder then do the link here
         <script defer src=""></script> -->
@@ -28,6 +30,25 @@
         <a href="./login.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
         <a href="./login.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
     </div>
+
+    </div>
+    <div class="box1">
+    </div>
+
+
+    <div class="logos">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+    </div>
+
+
+
+    <div class="box2"></div>
+
+
+    <body style="background-color:black;text-align:center"></body>
 </body>
 
 </html>
