--- a/login.html
+++ b/login.html
@@ -26,13 +26,13 @@
         <div id="authentication">
             <p id="counter">1</p>
             <div class="cartIcon">
-                <a href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
             <div class="userIcon"><i class="fas fa-users"></i></div>
             <input id="username" type="text" placeholder="username">
             <input id="password" type="text" placeholder="password">
             <button class="button">Submit</button>
-            <button id="signUpbtn" class="button">Sign Up</button>
+            <a href="./signupUser.html"><button class="button">Sign Up</button></a>
 
         </div>
 
@@ -42,9 +42,9 @@
     <main>
         <div class="container">
             <aside id="categories">
-                <h2 id="allProds">Products</h2>
-                <input type="submit" value="Submit" name="Submit" id="getCategories" />
-                <!-- This div will have the list "Categs" in it
+                <p>Products
+                    <p>
+                        <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
             </aside>
             <div id="categoryItems">
@@ -57,14 +57,14 @@
                 </div>
             </div>
             <div>
-                <input type="submit" value="Submit" name="Submit" id="getProducts" />
             </div>
         </div>
     </main>
     <footer class="footer">
         <div>
             <h2 class="SubScribe">Subscribe Newsletter</h2>
-            <input type="text" placeholder="name">
+            <input type="text" placeholder="firstname">
+            <input type="text" placeholder="lastname">
             <input type="text" placeholder="email">
             <button id="newsbtn" class="button">Submit</button>
         </div>
