--- a/signupUser.html
+++ b/signupUser.html
@@ -14,6 +14,25 @@
 </head>
 
 <body>
+    <header class="topnav">
+        <a href="./login.html">
+            <h1 class="title">Enjoy</h1>
+        </a>
+
+        <div id="authentication">
+            <p id="counter">1</p>
+            <div class="cartIcon">
+                <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+            <div class="userIcon"><i class="fas fa-users"></i></div>
+            <input id="username" type="text" placeholder="username">
+            <input id="password" type="text" placeholder="password">
+            <button class="button">Submit</button>
+        </div>
+
+        <!-- We need here to get the inlog field and "OR register" to the top right
+        then the name of our website in the middle with a nice style -->
+    </header>
     <p id="demo"></p>
     <!-- THIS site will have all the things that you see when you click in on reg -->
     <div class="signupContainer" id="signupContainer">
