soooo many fixes and now all connections works, started the login funcs

--- a/admin.html
+++ b/admin.html
@@ -65,11 +65,13 @@
 
                             <div class="row">
                                 <div class="label-left">Category Name</div>
-                                <input name="CategoryName" type="text" id="CategoryName" tabindex="1" placeholder="Category Name">
+                                <input name="CategoryName" type="text" id="CategoryName" tabindex="1"
+                                    placeholder="Category Name">
                             </div>
 
                             <div class="rowButton">
-                                <input name="addCategory" type="button" id="button" tabindex="2" value="Add Category" onclick="msg()">
+                                <input name="addCategory" type="button" id="button" tabindex="2" value="Add Category"
+                                    onclick="msg()">
                             </div>
 
                         </div>
@@ -117,7 +119,8 @@
 
                                 <div class="row">
                                     <div class="label-left">Category Name</div>
-                                    <select name="CategoryName" id="CategoryName" tabindex="1" placeholder="Category Name">
+                                    <select name="CategoryName" id="CategoryName" tabindex="1"
+                                        placeholder="Category Name">
                                         <option value="AddCategory">Choice Category</option>
                                         <option value="PC">PC</option>
                                         <option value="X-Box">X-Box</option>
@@ -127,12 +130,14 @@
 
                                 <div class="row">
                                     <div class="label-left">Product Name</div>
-                                    <input name="ProductName" type="text" id="ProductName" tabindex="2" placeholder="Category Name">
+                                    <input name="ProductName" type="text" id="ProductName" tabindex="2"
+                                        placeholder="Category Name">
                                 </div>
 
                                 <div class="row">
                                     <div class="label-left">Unit In Stock</div>
-                                    <input name="UnitInStock" type="text" id="UnitInStock" tabindex="3" placeholder="Unit In Stock">
+                                    <input name="UnitInStock" type="text" id="UnitInStock" tabindex="3"
+                                        placeholder="Unit In Stock">
                                 </div>
 
                                 <div class="row">
@@ -142,16 +147,19 @@
 
                                 <div class="row">
                                     <div class="label-left">Product Name</div>
-                                    <input name="Description" type="text" id="Description" tabindex="5" placeholder="Description">
+                                    <input name="Description" type="text" id="Description" tabindex="5"
+                                        placeholder="Description">
                                 </div>
 
                                 <div class="row">
                                     <div class="rowButton">
-                                        <input name="CoverPicture" type="button" id="buttonAdd" tabindex="6" value="Add Cover Picture" onclick="">
+                                        <input name="CoverPicture" type="button" id="buttonAdd" tabindex="6"
+                                            value="Add Cover Picture" onclick="">
                                     </div>
 
                                     <div class="rowButton">
-                                        <input name="PNGPicture" type="button" id="buttonAdd" tabindex="7" value="Add PNG Picture" onclick="">
+                                        <input name="PNGPicture" type="button" id="buttonAdd" tabindex="7"
+                                            value="Add PNG Picture" onclick="">
                                     </div>
 
                                 </div>
@@ -170,7 +178,8 @@
                                     </div>
                                 </div>
                                 <div class="rowButton">
-                                    <input name="addCategory" type="button" id="button" tabindex="8" value="Add Category" onclick="">
+                                    <input name="addCategory" type="button" id="button" tabindex="8"
+                                        value="Add Category" onclick="">
                                 </div>
                             </div>
 
@@ -257,6 +266,7 @@
 
         </div>
         </div>
+        <a href="login.html"><button>GO to login</button></a>
     </main>
 </body>
 
