--- a/admin.html
+++ b/admin.html
@@ -72,6 +72,7 @@
 
                             <div class="rowButton">
                                 <input name="adminCategory" type="button" id="button" class="AddAdminCategory" tabindex="2" value="Add Category">
+                                <input name="adminCategory" type="button" id="button" class="updateAdminCategory" tabindex="2" value="Update Category">
                             </div>
 
                         </div>
