--- a/login.html
+++ b/login.html
@@ -36,13 +36,15 @@
     <main>
         <div class="container">
             <aside id="categories">
-                <a href="./login.html"><p id="getProds">Products</p></a>
+                <a href="./login.html">
+                    <p id="getProds">Products</p>
+                </a>
                 <!-- This div will have the list "Categs" in it
                 like all prods and pc games etc...-->
             </aside>
-                <div class="allProducts" id="allProducts">
+            <div class="allProducts" id="allProducts">
 
-                </div>
+            </div>
             <div class="categoryItems" id="categoryItems">
                 <!-- This div to be able to style this childs as this will contain all the items
                     so we can place them right or left depending on the numbers of the items -->
@@ -61,11 +63,12 @@
             <input type="text" placeholder="email">
             <button id="newsbtn" class="button">Submit</button>
         </div>
-        <div><a href="./adminFrontend/admin.html">go to admin site</a></div>
+        <div><a href="./admin.html">go to admin site</a></div>
 
         <!-- If we want to have footer for some reason -->
     </footer>
 </body>
 
 </html>
+
 </html>
