Fixed some bugs to make the admin site work

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/77e9819b86.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./CSS/adminStyling.css">
-    <script defer type="module" src="./JS/appJS.js.js"></script>
+    <script defer type="module" src="./JS/appJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
     <title>Admin interface</title>
 </head>
