--- a/Cart.html
+++ b/Cart.html
@@ -36,6 +36,9 @@
         <div id="cartProducts">
 
         </div>
+        <div id="checkBox">
+
+        </div>
     </main>
     <footer class="footer">
         <div>
